--- a/SocialWeave/Views/Shared/_Layout.cshtml
+++ b/SocialWeave/Views/Shared/_Layout.cshtml
@@ -38,7 +38,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2024 - SocialWeave - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            &copy; 2024 - SocialWeave - <a asp-area="" asp-controller="Home" asp-action="About">Privacy</a>
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
