Added UserViewModel, and subtly updated the login logic in the UserService and the Login action

--- a/SocialWeave/Views/User/Login.cshtml
+++ b/SocialWeave/Views/User/Login.cshtml
@@ -1,4 +1,4 @@
-﻿@model SocialWeave.Models.ConcreteClasses.User
+﻿@model SocialWeave.Models.ViewModels.UserViewModel
 
 <form method="post" asp-controller="User" asp-action="Login">
 <div class="container">
