First tests with password recovery functionality started

--- a/SocialWeave/Views/User/Login.cshtml
+++ b/SocialWeave/Views/User/Login.cshtml
@@ -18,8 +18,8 @@
                 <button type="submit" class="btn btn-primary w-50">Login</button>
                 <hr>
                 <a class="" asp-controller="User" asp-action="Register">Sign Up</a>
-            <p class="forgot-password-link mt-3"><a href="#">Forgot your password?</a></p>
-        </div>
+                <a class="" asp-controller="User" asp-action="ForgotPassword">Forgot Password</a>
+            </div>
     </main>
 </div>
 </form>
