--- a/SocialWeave/Views/Post/ChoosePostType.cshtml
+++ b/SocialWeave/Views/Post/ChoosePostType.cshtml
@@ -1,19 +1,16 @@
 ﻿﻿@{
-    ViewData["title"] = "Logout Confirm";
+    ViewData["title"] = "Choose the post type";
 }
 
-<div class="container bg-dark p-5 rounded-5">
+
+<div class="container purple-gradient p-5 rounded-5">
     <div class="mb-5 text-center">
         <h1 class="text-light">@ViewData["title"]</h1>
-        <h2 class="text-light">
-            Choose the post type
-        </h2>
     </div>
-
-    <form method="Get" asp-controller="Post" asp-action="ChosePostWithoutImage">
         <div class="d-flex gap-5 mt-5">
-            <button type="submit" class="btn btn-primary w-50">Default Post</button>
-            <a class="btn btn-primary w-50" asp-controller="Post" asp-action="ChosePostWithImage">Post with image</a>
+        <a class="btn btn-primary w-50" asp-controller="Post" asp-action="CreatePost">Post Default</a>
+            <a class="btn btn-primary w-50" asp-controller="Post" asp-action="CreatePostImage">Post with image</a>
         </div>
-    </form>
 </div>
+
+
