--- a/SocialWeave/Views/User/Login.cshtml
+++ b/SocialWeave/Views/User/Login.cshtml
@@ -1,10 +1,11 @@
 ﻿@model SocialWeave.Models.ViewModels.UserViewModel
 
 <form method="post" asp-controller="User" asp-action="Login">
-<div class="container">
-    <main role="main" class="pb-3">
-        <div class="login-container">
-            <h2>Login</h2>
+    <div class="container">
+        <main role="main" class="pb-3">
+            <div class="login-container">
+                <h2>Login</h2>
+                <hr />
                 <div class="mb-3">
                     <label for="Email" class="form-label">Email: </label>
                     <input type="email" class="form-control" asp-for="Email" id="Email" placeholder="Enter your email">
@@ -15,11 +16,18 @@
                     <input type="password" class="form-control" asp-for="Password" id="Password" placeholder="Enter your password">
                     <span class="text-danger" asp-validation-for="Password"></span>
                 </div>
-                <button type="submit" class="btn btn-primary w-50">Login</button>
+                <div class="text-center">
+                    <button type="submit" class="btn btn-primary w-50">Login</button>
+                </div>
                 <hr>
-                <a class="" asp-controller="User" asp-action="Register">Sign Up</a>
-                <a class="" asp-controller="User" asp-action="ForgotPassword">Forgot Password</a>
-            </div>
-    </main>
-</div>
+                <div class="d-flex justify-content-between">
+                    <div>
+                        <a class="" asp-controller="User" asp-action="Register">Sign Up</a>
+                    </div>
+                    <div>
+                        <a class="" asp-controller="User" asp-action="ForgotPassword">Forgot Password</a>
+                    </div>
+                </div>
+        </main>
+    </div>
 </form>
