--- a/SocialWeave/wwwroot/css/site.css
+++ b/SocialWeave/wwwroot/css/site.css
@@ -1,22 +1,23 @@
-html {
-  font-size: 14px;
+body {
+    font-size: 14px;
+    color: white;
+    position: relative;
+    min-height: 100%;
+    background-color: black;
+    margin-bottom: 60px;
 }
 
 @media (min-width: 768px) {
-  html {
-    font-size: 16px;
-  }
+    body {
+        font-size: 16px;
+    }
+}
+
+
+.purple-gradient {
+    background: linear-gradient(180deg, #6A5ACD, #0000);
 }
 
 .btn:focus, .btn:active:focus, .btn-link.nav-link:focus, .form-control:focus, .form-check-input:focus {
-  box-shadow: 0 0 0 0.1rem white, 0 0 0 0.25rem #258cfb;
-}
-
-html {
-  position: relative;
-  min-height: 100%;
-}
-
-body {
-  margin-bottom: 60px;
+    box-shadow: 0 0 0 0.1rem white, 0 0 0 0.25rem #258cfb;
 }
