Implemented new Has Letter attribute, improving lagout logic

--- a/SocialWeave/Views/User/LogoutGet.cshtml
+++ b/SocialWeave/Views/User/LogoutGet.cshtml
@@ -1,4 +1,6 @@
-﻿﻿@{
+﻿@model SocialWeave.Models.ConcreteClasses.User
+
+@{
     ViewData["title"] = "Logout";
 }
 
@@ -6,8 +8,8 @@
     <div class="mb-5 text-center">
         <h1 class="text-light">@ViewData["title"]</h1>
         <h2>    
-            Are you sure you want to leave?
-        </h2>
+            Are you sure you want to leave @Model.Name?
+            </h2>
     </div>
     <form method="post" asp-controller="User" asp-action="LogoutPost">
     <div class="d-flex gap-5 mt-5">
