Added styling to Post creation forms

--- a/SocialWeave/Views/Home/About.cshtml
+++ b/SocialWeave/Views/Home/About.cshtml
@@ -1,6 +1,15 @@
-﻿@{
-    ViewData["Title"] = "Privacy Policy";
-}
-<h1>@ViewData["Title"]</h1>
+﻿﻿<section id="showcase">
+    <div class="container">
+        <h1><strong>Social Weave</strong></h1>
+        <h5>
+            <strong>Hello, my name is Pedro and I am the developer of this application, it was developed in ASP.NET, it is a 100% functional application, it focuses on the back-end, the data is manipulated through the code-first workflow, and contains connection to SQLServer!</strong>
+        </h5>
+    </div>
+</section>
 
-<p> </p>
+<section class="container">
+
+    <h2><strong>Contact</strong></h2>
+    <h5><i class="bi bi-envelope mx-2"></i><strong>Email:</strong> <a class="text-primary" href="mailto:devpedrohenri@gmail.com"><strong>devpedrohenri@gmail.com</strong></a></h5>
+    <h5><i class="bi bi-github mx-2"></i><strong>GitHub:</strong> <a class="text-primary" href="https://github.com/PedroHenriqDev/TASK-WEB-MVC" target="_blank"><strong>PedroHenriqDev/TASK-WEB-MVC</strong></a></h5>
+</section>
