--- a/SocialWeave/Views/Home/Index.cshtml
+++ b/SocialWeave/Views/Home/Index.cshtml
@@ -1,1 +1,11 @@
-﻿
+﻿@if(User.Identity.IsAuthenticated)
+{
+    
+}
+else
+{
+    <div class="text-center">
+        <h4><strong>Login to access Social Weave</strong></h4>
+        <a class="nav-link" style="font-size: 18px; margin-right: 15px;" asp-area="" asp-controller="User" asp-action="Login"><i class="bi bi-box-arrow-in-right mx-2"></i>Login</a>
+    </div>
+}
