--- a/SocialWeave/Views/User/LogoutGet.cshtml
+++ b/SocialWeave/Views/User/LogoutGet.cshtml
@@ -1,22 +1,33 @@
-﻿@model SocialWeave.Models.ConcreteClasses.User
+﻿@using SocialWeave.Extensions
+
+@model SocialWeave.Models.ConcreteClasses.User
 
 @{
     ViewData["title"] = "Logout";
 }
 
-<div class="container bg-gradient p-5 rounded-5">
+<style>
+ 
+
+    .purple-gradient {
+        background: linear-gradient(135deg, #9C27B0, #673AB7);
+        border-radius: 15px;
+        box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+    }
+
+</style>
+
+<div class="container purple-gradient p-5 rounded-5">
     <div class="mb-5 text-center">
-        <h1 class="text-light">@ViewData["title"]</h1>
-        <h2>    
-            Are you sure you want to leave @Model.Name?
-        </h2>
+        <h1 class="text-light">@ViewData["title"]<i class="bi bi-door-open mx-2"></i></h1>
+        <h3>
+            Are you sure you want to leave @Model.Name.CutName()?
+        </h3>
     </div>
     <form method="post" asp-controller="User" asp-action="LogoutPost">
-    <div class="d-flex gap-5 mt-5">
-         <button type="submit" class="btn btn-primary w-50">Logout</button>
-        <a class="btn btn-primary w-50" asp-controller="Home" asp-action="Index">Return</a>
-    </div>
+        <div class="d-flex gap-5 mt-5">
+            <button type="submit" class="btn btn-outline-danger text-light w-50">Logout</button>
+            <a class="btn btn-outline-primary text-light w-50" asp-controller="Home" asp-action="Index">Return</a>
+        </div>
     </form>
 </div>
-
-
