Implemented logic to show post duration

--- a/SocialWeave/Views/Home/Index.cshtml
+++ b/SocialWeave/Views/Home/Index.cshtml
@@ -11,12 +11,16 @@
             @foreach (var post in Model)
             {
                 <div class="post">
+                    <div class="text-center">
+                        <p>@post.Date.Duration()</p>
+                    </div>
                     @if (post.User.PictureProfile == null)
                     {
                         <div class="post-header text-xxl-start">
                             <h5><i class="bi bi-person-circle mx-2"></i>@post.User.Name.CutName()</h5>
                         </div>
                     }
+                   
                     <div class="post-content text-xxl-start">
                         <p>@post.Description.CutDescription()</p>
                         <div class="post-header"></div>
@@ -26,7 +30,6 @@
                                 <form method="post" asp-action="Dislike" asp-route-id="@post.Id" asp-controller="Post" class="d-flex align-items-center">
                                     <button type="submit" class="btn btn-purple"><i class="bi bi-heart-fill text-danger"><p class="m-0">@post.Likes.CountLikes()</p></i><p class="m-0"></button>
                                 </form>
-
                             }
                             else
                             {
